[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-sql-print"
version = "0.1.2"
description = "Pretty-print and format SQL queries for debugging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["sql", "format", "pretty-print", "debug", "query", "orm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-sql-print"
Repository = "https://github.com/philiprehberger/py-sql-print"
Issues = "https://github.com/philiprehberger/py-sql-print/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_sql_print"]
